[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sliceview"
version = "0.1.0"
description = "Zero-copy, composable slice views for Python sequences"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Juliano Fischer Naves", email = "julianofischer@gmail.com" }
]
keywords = ["slice", "view", "sequence", "zero-copy", "memory", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/julianofischer/sliceview"
"Bug Tracker" = "https://github.com/julianofischer/sliceview/issues"
Discussions = "https://discuss.python.org/t/slice-views-for-python-sequences/103531"

[tool.hatch.build.targets.wheel]
packages = ["src/sliceview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/sliceview"]
